# diffusion-and-ctrw

./: README.md  pyproject.toml  requirements.txt
data/: ctrw_dataset.npz
models/: ctrw_lstm.pt
outputs/.matplotlib/: fontlist-v390.json
scripts/: make_project_outputs.py
src/ctrw_ml/: __init__.py  config.py  data.py  evaluate.py  model.py  msd.py  pipeline.py  preprocessing.py  train.py  transfer.py
